<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.StartFragment">

    <data>
        <variable
            name="StartFragment"
            type="com.example.flowers_app.ui.StartFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        app:srcCompat="@drawable/iris_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/order_flowers"
                        android:fontFamily="@font/tajawal_bold"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        android:textColor="@color/material_on_background_emphasis_medium" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/bt_see_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> StartFragment.seeMenu()}"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:text="@string/see_menu" />

            <Button
                android:id="@+id/bt_order_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> StartFragment.orderNow()}"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/order_now" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:text="@string/contact_us"
                    android:fontFamily="@font/tajawal_medium"
                    android:textSize="14sp"/>


                <ImageView
                    android:id="@+id/img_location"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/marker"
                    android:onClick="@{() -> StartFragment.showLocation()}"/>

                <ImageView
                    android:id="@+id/img_bt_number_phone"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/phone_call"
                    android:onClick="@{() -> StartFragment.showPhoneNumber()}"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>